// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "io.grpc.examples.sone";
option java_outer_classname = "serviceone";
option objc_class_prefix = "SONE";

package sone;

// The greeting service definition.
service ServiceOne {
  // Sends a greeting
  rpc ProductDiscount (ProductRequest) returns (Product) {}
}

// The request message containing the user's name.
message ProductRequest {
  string ProductId = 1;
  string UserId = 2;
}

message Product{
    string Id= 1;
    int32 price_in_cents = 2;
    string title = 3;
    string description = 4;
    message Discount {
        float pct = 5;
        int32 value_in_cents = 6;
    }
}

message User{
	string Id = 1;
    string first_name = 2;
    string last_name  = 3;
	google.protobuf.Timestamp birth_date = 4;
}